; ModuleID = '/home/carl/AnghaBench/lab/engine/code/bspc/extr_map_q2.c_Q2_PopNodeStack.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/bspc/extr_map_q2.c_Q2_PopNodeStack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nodestackptr = common dso_local global i32* null, align 8
@nodestack = common dso_local global i32* null, align 8
@nodestacksize = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Q2_PopNodeStack() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @nodestackptr, align 8
  %3 = load i32*, i32** @nodestack, align 8
  %4 = icmp ule i32* %2, %3
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %13

6:                                                ; preds = %0
  %7 = load i32*, i32** @nodestackptr, align 8
  %8 = getelementptr inbounds i32, i32* %7, i32 -1
  store i32* %8, i32** @nodestackptr, align 8
  %9 = load i32, i32* @nodestacksize, align 4
  %10 = add nsw i32 %9, -1
  store i32 %10, i32* @nodestacksize, align 4
  %11 = load i32*, i32** @nodestackptr, align 8
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %6, %5
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
